components/pedigree/resources/src/main/resources/pedigree/editor.css
/* ... */
.menu-box .field-last_name_birth {
  width: 48%;
  float: left;
  padding: .5em 0 0.9em;
}
.menu-box .field-external_id {
  width: 48%;
  float: right;
  padding: .5em 0 0.9em;
}
.menu-box .field-date_of_birth {
  width: 48%;
  float: left;
  margin-bottom: 6px;
}
.menu-box .field-date_of_death {
  width: 48%;
  float: right;
  margin-top: -5px; /* TODO: investigate why elements float below its intended position */
  margin-bottom: 6px;
}
.menu-box .accepted-suggestions {
  margin: 0px 0px 0.3em !important;
}
.menu-box .field-childlessText {
  padding: 0 0;
}
.menu-box .field-adopted {
  padding: 0.6em 0;
}
.menu-box .field-monozygotic {
  padding: 0.5em 0 0.26em 0;
}
.menu-box .field-nocontact {
  padding: 0.26em 0;
}
.menu-box .field-placeholder {
  padding: 0.26em 0;
}
.menu-box .field-gestation_age {
  padding: 0.45em 0;
}
.menu-box .field-evaluated {
  padding-top: 0.26em;
  padding-bottom: 0.5em;
  padding-right: 0;
  margin-left: -0.1em;
}
.menu-box .field-evaluated .field-name {
  font-weight: normal;
}
.menu-box .field-carrier {
  padding-top: 0.8em;
  padding-bottom: 0.6em;
  padding-right: 0;
  padding-left: 0;
}
.menu-box .field-hpo_positive {
  padding: 1em 0;
}
/* Disable the "browse ontology" button, as ontology browser events are not supported (yet) */
.tooltip-phenotype-info .term-tools {
  display: none;
}
.menu-box .field-disorders {
  padding: 0.6em 0;
}
.menu-box .field-candidate_genes {
  padding: 0.6em 0;
}
.menu-box .field-identifier {
  padding: 0 0;
}
.menu-box .field-childlessSelect {
  padding: 0.5em 0 0.5em;
}

/* ===========================================
 * NODE TYPE OPTIONS
 */
.callout {
  position: absolute;
  width: auto;
  padding: 3px 0;
  border: 1px solid #F5F5F5;
  border-radius: 4px;
  background: #EEE;
  text-align: center;
  white-space: nowrap !important;
  box-shadow: 0 0 6px #FF9, 0 0 25px #DDDDDD inset;
}
.callout .callout-handle {
  position: absolute;
  top: -8px;
  border: 10px solid #e5e5e5;
  border-top-width: 0;
  border-left-color: transparent;
  border-right-color: transparent;
  display: block;
  width: 0;
  z-index: 10;
  margin-left: -10px;
}
.callout.upside .callout-handle {
  border-top-width: 10px;
  border-bottom-width: 0;
  top: auto;
  bottom: -8px;
}
.node-type-options {
  position: relative;
}
.node-type-options .separator {
  display: inline-block;
  width: 0;
  margin: 0 8px;
  overflow: hidden;
}
.node-type-options .node-type-option {
  background: transparent none center center no-repeat;
  border: 1px solid #F5F5F5;
  border-radius: 4px;
  display: inline-block;
  margin: 3px;
  height: 24px;
  width: 24px;
  box-shadow: 0 0 9px #DDDDDD inset;
  color: black !important;
  vertical-align: middle;
  text-decoration: none !important;
 /*
  TODO: Keep this:
  overflow: hidden;
  text-indent: 48px;
  line-height: 48px;
  font-size: 1px;
  TODO: remove this
  */
  text-align: center;
  line-height: 24px;
}
/* The unicode symbols we use for different node types have disproportionate sizes.
   Adjusting the font size for a cleaner look:
*/
.fa-rotate-45 {
  -webkit-transform: rotate(45deg);
  -moz-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  -o-transform: rotate(45deg);
  transform: rotate(45deg);
  display: inline-block !important;
  font-size: 90%;
}
.expand-arrow {
  cursor: pointer;
  font-size: 15px;
  margin-left: -1px;
  margin-right: 2px;
}
.expand-arrow:hover {
  color: #6666CC;
}
.node-type-options .expandable-node-type-option {
    background: transparent none center center no-repeat;
    border: 1px solid #F5F5F5;
    border-radius: 4px;
    display: inline-block;
    margin: 3px;
    height: 24px;
    width: 24px;
    box-shadow: 0 0 9px #DDDDDD inset;
    color: black !important;
    vertical-align: middle;
    text-decoration: none !important;
    /*
    TODO: Keep this:
    overflow: hidden;
    text-indent: 48px;
    line-height: 48px;
    font-size: 1px;
    TODO: remove this
    */
    text-align: center;
    line-height: 24px;
}
.node-type-options-extended * {
    vertical-align: middle;
}

.value-control-button {
  border: 1px solid #FFF;
  border-radius: 3px;
  box-shadow: 0 0 5px #DDD inset;
  cursor: pointer;
  display: inline-block;
  font-size: 1.1em;
  font-weight: bold;
  height: 1em;
  line-height: 1em;
  margin: 3px;
  padding: 3px;
  text-align: center;
  width: 1em;
}
.minus-button {
  color: #C00;
}

.plus-button {
  color: #080;
}

.msdialog-modal-container .pedigree-template-chooser {
    width: 720px;
}
.picture-box {
    display: inline-block;
    box-shadow: rgba(0, 0, 0, 0.5) 0 0 5px 2px;
    margin: 14px;
}
.picture-box:hover {
    cursor: pointer;
    box-shadow: rgba(0, 10, 0, 0.5) 0 0 5px 4px;
}

.template-picture-container {
    display: inline-block;
    margin: 3px;
}

.msdialog-box {
    /*overflow:auto;*/
    width: 650px;
}
.msdialog-box .content {
    text-align: center;
}
.no-mouse-interaction {
    pointer-events: none;
}
/* Make sure the tooltips fit nicely in the suggest box in the pedigree editor: */
.suggestItem .xTooltip {
  left: 4px;
  margin: 1.4em 0 0;
}

/* TODO: add icons to each option type:
.node-type-options .node-type-M {
  background-image: url("$xwiki.getSkinFile('.png')");
}
.node-type-options .node-type-F {
  background-image: url("$xwiki.getSkinFile('.png')");
}
.node-type-options .node-type-U {
  background-image: url("$xwiki.getSkinFile('.png')");
}
.node-type-options .node-type-T {
  background-image: url("$xwiki.getSkinFile('.png')");
}
.node-type-options .node-type-m {
  background-image: url("$xwiki.getSkinFile('.png')");
}
.node-type-options .node-type-i {
  background-image: url("$xwiki.getSkinFile('.png')");
}
.node-type-options .node-type-n {
  background-image: url("$xwiki.getSkinFile('.png')");
}
*/

/* Datepicker style */
.fuzzy-date-picker {
  margin-right: -2px;
}
.fuzzy-date-picker select {
  font-family: Arial,Verdana,sans-serif;
}
.fuzzy-date-picker .year {
  font-size: 14px;
}
/* ... */

